--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
+    <<div>
+        <navbar>list</navbar>
+    </div>
     <h1>Hello world</h1>
     </body>
 </html>
