--- a/index.html
+++ b/index.html
@@ -1,15 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title></title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="style.css" rel="stylesheet">
-    </head>
-    <body>
-    <<div>
-        <navbar>list</navbar>
-    </div>
-    <h1>Hello world</h1>
-    </body>
-</html>
+.night
+  - for (i = 0; i < 20; i++)
+    .shooting_star
