--- a/index.html
+++ b/index.html
@@ -6,29 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Counter</title>
-
-    <style>
-        .screen {
-            height: 100vh;
-            width: 100vw;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-
-        button  {
-            margin: 32px;
-        }
-
-        body    {
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-        }
-    </style>
-
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="" href="styles.css">
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <script src="index.js"></script>
 </head>
