--- a/index.html
+++ b/index.html
@@ -1,33 +1,20 @@
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Counter</title>
-    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="" href="style.css">
-    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
-    <script src="index.js"></script>
+    <title>Great Man Quotes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
-<body class="mdc-typography">
-    <div class="screen">
-        <h1 id="counter" style="margin-bottom: 32px; font-size: 128px; color: #FBC02D; font-weight: 400;">0</h1>
-        <div>
-            <button class="mdc-button mdc-button--raised" onclick="decrease()">
-                <span class="mdc-button__label">Decrease</span>
-            </button>
-            <button class="mdc-button mdc-button--raised" onclick="reset()">
-                <span class="mdc-button__label">Reset</span>
-            </button>
-            <button class="mdc-button mdc-button--raised" onclick="increase()">
-                <span class="mdc-button__label">Increase</span>
-            </button>    
-        </div>
+<body>
+    <div class="container">
+        <h1>Great Man Quotes</h1>
+        <button type ="button" id="quoteBtn">Click Here</button>
+        <blockquote>
+            <h2 id="quote">Quotes</h2>
+        </blockquote>
+        <h3 id="quoteAuthor">Author Name</h3>
     </div>
-
+<script src="index.js"></script>    
 </body>
-
 </html>
